syntax = "proto3";

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/signing/v1;signing";

// Package arrebato.signing.v1 provides domain models for signing keys.
package arrebato.signing.v1;

// The KeyPair message describes a single public/private key pair used for message signing.
message KeyPair {
  // The private key for signing message keys.
  bytes private_key = 1;
  // The public key for validating message key signatures.
  bytes public_key = 2;
}
